--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,14 +1,23 @@
 {
   "name": "@tindev/server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon src/server.js"
+  },
   "dependencies": {
+    "axios": "^0.21.1",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.12",
+    "socket.io": "^3.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
+    "nodemon": "^2.0.7",
+    "sucrase": "^3.17.0",
     "ts-node-dev": "^1.0.0-pre.52"
   }
 }
