--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -3,3 +3,6 @@ APP_PORT=3333
 
 # DATABASE CONNECTION
 MONGO_URL=mongodb://tindev:tindev@localhost:27017
+
+# GITHUB API BASE URL
+GITHUB_API_URL=https://api.github.com
