feat: like dev feature

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,7 +4,9 @@
   "main": "src/server.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server",
+    "build": "sucrase ./src -d ./dist --transforms imports",
+    "start": "node ./dist/server"
   },
   "dependencies": {
     "axios": "^0.21.1",
