chore: adding .env for tests

--- a/packages/server/.env.test
+++ b/packages/server/.env.test
@@ -1,9 +1,8 @@
 # APPLICATION PORT
 APP_PORT=3333
 
-# DATABASE CONNECTION
-MONGO_URL=mongodb://tindev:tindev@localhost:27017
-DB_NAME=tindev
+# DATABASE NAME
+DB_NAME=tindev-test
 
 # GITHUB API BASE URL
 GITHUB_API_URL=https://api.github.com
