--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "packages": [
       "packages/*"
     ],
-    "nohoist": ["**/react-native", "**/react-native/**"]
+    "nohoist": [
+      "**/react-native",
+      "**/react-native/**"
+    ]
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
@@ -32,7 +35,6 @@
     "@tindev/eslint-config": "*",
     "cross-env": "^7.0.3",
     "husky": "^4.3.8",
-    "jest": "^26.6.3",
     "lint-staged": "^10.5.3"
   }
 }
