--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,7 +4,8 @@
   "main": "src/server.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/server",
+    "dev": "nodemon src/server --ignore __tests__",
+    "test": "NODE_ENV=test jest",
     "build": "sucrase ./src -d ./dist --transforms imports",
     "start": "node ./dist/server"
   },
@@ -18,7 +19,11 @@
     "socket.io": "^3.1.0"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^1.2.3",
+    "@sucrase/jest-plugin": "^2.0.0",
     "@types/express": "^4.17.7",
+    "jest": "^26.6.3",
+    "mongodb-memory-server": "^6.9.3",
     "nodemon": "^2.0.7",
     "sucrase": "^3.17.0",
     "ts-node-dev": "^1.0.0-pre.52"
